Collect-TV-20180201/src/objects/TECHNET_Promotion__c.object
<CustomObject>
    <description>Promotions that TECHNET members will be able to enroll in</description>
    <fields>
        <fullName>Available_Spots__c</fullName>
        <description>Number of spots available in the promotion</description>
        <label>Available Spots</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Categories__c</fullName>
        <description>The category that the promotion applies to</description>
        <label>Categories</label>
        <picklist>
            <picklistValues>
                <fullName>Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Days_Remaining_to_End__c</fullName>
        <formula>IF( End_Date__c - TODAY() &gt; 0, End_Date__c - TODAY() , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Remaining to End</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Remaining_to_Go__c</fullName>
        <description>Days until deadline to register passes</description>
        <formula>IF((Deadline__c - TODAY())&lt;0, 0, Deadline__c - TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Remaining to Go</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deadline__c</fullName>
        <description>Deadline for registration</description>
        <label>Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <description>Promotion details</description>
        <label>Details</label>
        <length>25535</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End date of the promotion</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <label>Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Methods__c</fullName>
        <description>Method that the promotion will use</description>
        <label>Methods</label>
        <picklist>
            <picklistValues>
                <fullName>Online Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Store Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebate</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Objectives__c</fullName>
        <description>Objective of the promotion</description>
        <label>Objectives</label>
        <length>25535</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Information__c</fullName>
        <description>Additional information about the promotion</description>
        <label>Other Information</label>
        <length>25535</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Overarching parent to this promotion</description>
        <label>TECHNET Promotion</label>
        <referenceTo>TECHNET_Promotion__c</referenceTo>
        <relationshipLabel>TECHNET Promotions</relationshipLabel>
        <relationshipName>TECHNET_Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promotion_Contact_Email__c</fullName>
        <description>Email to contact for further information</description>
        <label>Promotion Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Promotion_Contact_Name__c</fullName>
        <description>Name of individual to contact regarding the promotion</description>
        <label>Promotion Contact Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Promotion_Contact_Phone_Number__c</fullName>
        <description>Phone number of individual to contact regarding the promotion</description>
        <label>Promotion Contact Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Promotion_Description__c</fullName>
        <label>Promotion Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Promotion_Type__c</fullName>
        <label>Promotion Type</label>
        <picklist>
            <picklistValues>
                <fullName>Rebate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Store Discount</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requirements__c</fullName>
        <description>Requirements to enroll in promotion</description>
        <label>Requirements</label>
        <length>25535</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Segments__c</fullName>
        <description>Customer segment that the promotion is targeting</description>
        <label>Segments</label>
        <picklist>
            <picklistValues>
                <fullName>Car Owners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Truck Owners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanics</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start date of the promotion</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the promotion</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Terms_and_Conditions__c</fullName>
        <label>Terms and Conditions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Timeline_Status__c</fullName>
        <formula>IF( AND(TODAY()&gt;= Start_Date__c ,TODAY()&lt;= End_Date__c ) , &quot;In Progress&quot;, IF(TODAY()&lt;Start_Date__c, &quot;Upcoming&quot;, &quot;Completed&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Timeline Status</label>
        <type>Text</type>
    </fields>
    <label>TECHNET Promotion</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Available_Spots__c</columns>
        <columns>Categories__c</columns>
        <columns>Days_Remaining_to_End__c</columns>
        <columns>Days_Remaining_to_Go__c</columns>
        <columns>Deadline__c</columns>
        <columns>Details__c</columns>
        <columns>Methods__c</columns>
        <columns>Promotion_Contact_Email__c</columns>
        <columns>Promotion_Contact_Name__c</columns>
        <columns>Promotion_Contact_Phone_Number__c</columns>
        <columns>Promotion_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>TECHNET Promotion Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>